--- a/ff_ios2/ff_ios2/RestoreView.xib
+++ b/ff_ios2/ff_ios2/RestoreView.xib
@@ -37,12 +37,12 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">306</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIButton" id="641707073">
+					<object class="IBUIButton" id="818166034">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">293</int>
-						<string key="NSFrame">{{124, 224}, {73, 44}}</string>
+						<string key="NSFrame">{{124, 297}, {73, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -50,7 +50,7 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">リストア</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="555924367">
+						<object class="NSColor" key="IBUIHighlightedTitleColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -72,13 +72,12 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="274686160">
+					<object class="IBUILabel" id="693179124">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 20}, {250, 22}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="822627764"/>
+						<reference key="NSNextKeyView" ref="228006916"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -86,31 +85,30 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">購入のリストア</string>
-						<object class="NSColor" key="IBUITextColor" id="533099239">
+						<object class="NSColor" key="IBUITextColor" id="421840874">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
 							<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="748663685">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="906890626">
 							<int key="type">1</int>
 							<double key="pointSize">22</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="461531046">
+						<object class="NSFont" key="IBUIFont" id="759857488">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">22</double>
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUILabel" id="822627764">
+					<object class="IBUILabel" id="228006916">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{20, 50}, {280, 32}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="468130173"/>
+						<reference key="NSNextKeyView" ref="482644930"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -118,15 +116,15 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">下のボタンを押すと、過去に購入したタイトルの購入情報が端末にリストアされます。</string>
-						<reference key="IBUITextColor" ref="533099239"/>
+						<reference key="IBUITextColor" ref="421840874"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUINumberOfLines">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="765900083">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="985085666">
 							<int key="type">1</int>
 							<double key="pointSize">14</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="709562626">
+						<object class="NSFont" key="IBUIFont" id="125540612">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">14</double>
 							<int key="NSfFlags">16</int>
@@ -134,13 +132,12 @@
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<double key="preferredMaxLayoutWidth">280</double>
 					</object>
-					<object class="IBUILabel" id="468130173">
+					<object class="IBUILabel" id="482644930">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{20, 90}, {280, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="697212468"/>
+						<reference key="NSNextKeyView" ref="758285518"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -148,56 +145,64 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">『紅茶ボタン』『完全人型』</string>
-						<reference key="IBUITextColor" ref="533099239"/>
+						<reference key="IBUITextColor" ref="421840874"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUINumberOfLines">0</int>
-						<reference key="IBUIFontDescription" ref="748663685"/>
-						<reference key="IBUIFont" ref="461531046"/>
+						<reference key="IBUIFontDescription" ref="906890626"/>
+						<reference key="IBUIFont" ref="759857488"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<double key="preferredMaxLayoutWidth">280</double>
 					</object>
-					<object class="IBUILabel" id="697212468">
+					<object class="IBUILabel" id="758285518">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">290</int>
-						<string key="NSFrame">{{20, 148}, {280, 68}}</string>
+						<string key="NSFrame">{{20, 148}, {280, 141}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="641707073"/>
+						<reference key="NSNextKeyView" ref="818166034"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">単体アプリの『紅茶ボタン』『完全人型』の購入情報を引き継ぐことができます。下のボタンを押す前に、各アプリを最新版にアップデートしてください。</string>
-						<reference key="IBUITextColor" ref="533099239"/>
+						<string type="base64-UTF8" key="IBUIText">5Y2Y5L2T44Ki44OX44Oq44Gu44CO57SF6Iy244Oc44K/44Oz44CP44CO5a6M5YWo5Lq65Z6L44CP44Gu
+6LO85YWl5oOF5aCx44KS5byV44GN57aZ44GQ44GT44Go44GM44Gn44GN44G+44GZ44CC5LiL44Gu44Oc
+44K/44Oz44KS5oq844GZ5YmN44Gr44CB5ZCE44Ki44OX44Oq44KS5pyA5paw54mI44Gr44Ki44OD44OX
+44OH44O844OI44GX44Gm44GP44Gg44GV44GE44CCDeOBk+OCjOOCieOBruizvOWFpeaDheWgseOBr2lD
+bG91ZOOBq+OCguS/neWtmOOBleOCjOOBvuOBmeOAguOBhOOBo+OBn+OCk+W8leOBjee2meOBhOOBoOW+
+jOOBr+OAgeerr+acq+S4iuOBq+OBk+OCjOOCieOBruWNmOS9k+OCouODl+ODquOBjOOCpOODs+OCueOD
+iOODvOODq+OBleOCjOOBpuOBhOOBquOBj+OBpuOCguOAgeizvOWFpeOCkuODquOCueODiOOCouOBl+OB
+vuOBmeOAgg</string>
+						<reference key="IBUITextColor" ref="421840874"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUINumberOfLines">0</int>
-						<reference key="IBUIFontDescription" ref="765900083"/>
-						<reference key="IBUIFont" ref="709562626"/>
+						<reference key="IBUIFontDescription" ref="985085666"/>
+						<reference key="IBUIFont" ref="125540612"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<double key="preferredMaxLayoutWidth">280</double>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 287}</string>
+				<string key="NSFrameSize">{320, 360}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="274686160"/>
-				<reference key="IBUIBackgroundColor" ref="555924367"/>
+				<reference key="NSNextKeyView" ref="693179124"/>
+				<object class="NSColor" key="IBUIBackgroundColor">
+					<int key="NSColorSpace">2</int>
+					<bytes key="NSRGB">MC44Nzg0MzEzNzI1IDAuOTA1ODgyMzUyOSAwLjk0MTE3NjQ3MDYAA</bytes>
+				</object>
 				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
 					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
 					<string key="IBUIDisplayName">Freeform</string>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUIScrollView" id="365944206">
+			<object class="IBUIScrollView" id="868808339">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
-				<string key="NSFrameSize">{147, 165}</string>
+				<string key="NSFrameSize">{129, 152}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<bool key="IBUIClipsSubviews">YES</bool>
 				<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -210,7 +215,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">view</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="365944206"/>
+						<reference key="destination" ref="868808339"/>
 					</object>
 					<int key="connectionID">15</int>
 				</object>
@@ -225,7 +230,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">restoreButtonTapped:</string>
-						<reference key="source" ref="641707073"/>
+						<reference key="source" ref="818166034"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -234,7 +239,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="365944206"/>
+						<reference key="source" ref="868808339"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">17</int>
@@ -252,11 +257,11 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="274686160"/>
-							<reference ref="822627764"/>
-							<reference ref="468130173"/>
-							<reference ref="697212468"/>
-							<reference ref="641707073"/>
+							<reference ref="693179124"/>
+							<reference ref="228006916"/>
+							<reference ref="482644930"/>
+							<reference ref="758285518"/>
+							<reference ref="818166034"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -273,32 +278,32 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="641707073"/>
+						<reference key="object" ref="818166034"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
-						<reference key="object" ref="274686160"/>
+						<reference key="object" ref="693179124"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">11</int>
-						<reference key="object" ref="822627764"/>
+						<reference key="object" ref="228006916"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="468130173"/>
+						<reference key="object" ref="482644930"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="697212468"/>
+						<reference key="object" ref="758285518"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="365944206"/>
+						<reference key="object" ref="868808339"/>
 						<reference key="parent" ref="0"/>
 					</object>
 				</array>
@@ -322,48 +327,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">18</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">RestoreViewController</string>
-					<string key="superclassName">ScrollableViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">restoreButtonTapped:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">restoreButtonTapped:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">restoreButtonTapped:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/RestoreViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ScrollableViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">contentView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">contentView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ScrollableViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
